testdata/baselines/reference/compiler/nodeModulesPackageImportsRootWildcardNode16.errors.txt
nodeModulesPackageImportsRootWildcardNode16(1,1): error TS1128: Declaration or statement expected.
nodeModulesPackageImportsRootWildcardNode16(1,13): error TS1128: Declaration or statement expected.
nodeModulesPackageImportsRootWildcardNode16(1,13): error TS1128: Declaration or statement expected.
nodeModulesPackageImportsRootWildcardNode16(1,13): error TS1005: '}' expected.
nodeModulesPackageImportsRootWildcardNode16(1,13): error TS1005: ';' expected.
nodeModulesPackageImportsRootWildcardNode16(1,20): error TS1128: Declaration or statement expected.
nodeModulesPackageImportsRootWildcardNode16(1,35): error TS1128: Declaration or statement expected.

==== nodeModulesPackageImportsRootWildcardNode16 (7 errors) ====
    
package.json(1,1): error TS1128: Declaration or statement expected.
package.json(2,11): error TS1128: Declaration or statement expected.
package.json(2,11): error TS1128: Declaration or statement expected.
package.json(2,11): error TS1005: '}' expected.
package.json(2,11): error TS1005: ';' expected.
package.json(2,18): error TS1128: Declaration or statement expected.
package.json(3,10): error TS1128: Declaration or statement expected.

==== package.json (7 errors) ====
    {
    ~~
!!! error TS1128: Declaration or statement expected.
        "name": "package",
              ~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1005: '}' expected.
              ~
!!! error TS1005: ';' expected.
                     ~~~~~~
!!! error TS1128: Declaration or statement expected.
        "private": true,
             ~~~~
!!! error TS1128: Declaration or statement expected.
        "type": "module",
        "imports": {
            "#/*": "./src/*"
        }
    }
src/foo.ts(1,1): error TS1128: Declaration or statement expected.
src/foo.ts(1,13): error TS1128: Declaration or statement expected.
src/foo.ts(1,13): error TS1128: Declaration or statement expected.
src/foo.ts(1,13): error TS1005: '}' expected.
src/foo.ts(1,13): error TS1005: ';' expected.
src/foo.ts(1,20): error TS1128: Declaration or statement expected.
src/foo.ts(1,35): error TS1128: Declaration or statement expected.

==== src/foo.ts (7 errors) ====
    export const foo = "foo";
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS1005: '}' expected.
                ~
!!! error TS1005: ';' expected.
                       ~~~~~~
!!! error TS1128: Declaration or statement expected.
index.ts(1,1): error TS1128: Declaration or statement expected.
index.ts(1,13): error TS1128: Declaration or statement expected.
index.ts(1,13): error TS1128: Declaration or statement expected.
index.ts(1,13): error TS1005: '}' expected.
index.ts(1,13): error TS1005: ';' expected.
index.ts(2,1): error TS1128: Declaration or statement expected.
index.ts(2,16): error TS1128: Declaration or statement expected.

==== index.ts (7 errors) ====
    // esm format file
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS1005: '}' expected.
                ~
!!! error TS1005: ';' expected.
    import { foo } from "#/foo.js";
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                   ~~~~
!!! error TS1128: Declaration or statement expected.
    foo;
    
